--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   }
 }
